Add text and fit map

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 			</form>
 		</div>
     <aside>
-      <h3 class="who">Who am i?</h3>
+      <h3 class="who">Who Am I?</h3>
       <img src="imgs/IMG_20150526_200415.jpg" alt="Robin Foto" class="profile">
-      <p class="bio">My name is Robin Hurtado Abadia, I am a software developer, currently living in Medellín, i was born in this city <br> but i grew up in the pacifict coast, my passions involve: Programming, learning languages, travel, reading literature and nutrition.</p>
-      <div id="map" class="map" style="width:400px;height:400px">Medellín city</div>
+      <p class="bio">My name is Robin Hurtado Abadia, I am a software developer, currently living in Medellín, i was born in this city <br> but i grew up in the pacifict coast, my passions involve: Programming computer, learning languages, <br> meet new places, people and culture, i like to read literature and nutrition is a important topic that i like to discuss about.</p>
+      <div id="map" class="map">Medellín city</div>
       <script type="text/javascript">
         function medMap() {
           var mapOptions = {
@@ -64,6 +64,7 @@
       </script>
       <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCp0DpcWQ4NJKHA7nATpXAyZIRQKWfkUIs&callback=medMap"></script>
     </aside>
+    <p style="margin-left: 12%;margin-bottom: 5%">Meddellín is known for being the most technological city in Colombia, at the time of this writing (21/03/2018) i am studying <br> software Engineer in the IUSH university, located near to Atanasio Girardot Stadium.</p>
 		<footer> <!-- footer -->
       <div class="container">
         <p class="navbar-text pull-left">&copy; <em id="currYear"></em> Js Quiz. Make It By: Robin Hurtado</p>
