--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </script>
       <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCp0DpcWQ4NJKHA7nATpXAyZIRQKWfkUIs&callback=medMap"></script>
     </aside>
-    <p style="margin-left: 12%;margin-bottom: 5%">Meddellín is known for being the most technological city in Colombia, at the time of this writing (21/03/2018) i am studying <br> software Engineer in the IUSH university, located near to Atanasio Girardot Stadium.</p>
+    <p class="med">Meddellín is known for being the most technological city in Colombia, at the time of this writing (21/03/2018) i am studying <br> software Engineer in the IUSH university, located near to Atanasio Girardot Stadium.</p>
 		<footer> <!-- footer -->
       <div class="container">
         <p class="navbar-text pull-left">&copy; <em id="currYear"></em> Js Quiz. Make It By: Robin Hurtado</p>
