Add a bigger font-size

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
     <aside>
       <h3 class="who">Who Am I?</h3>
       <img src="imgs/IMG_20150526_200415.jpg" alt="Robin Foto" class="profile">
-      <p class="bio">My name is Robin Hurtado Abadia, I am a software developer, currently living in Medellín, i was born in this city <br> but i grew up in the pacifict coast, my passions involve: Programming computer, learning languages, <br> meet new places, people and culture, i like to read literature and nutrition is a important topic that i like to discuss about.</p>
+      <em class="bio">My name is Robin Hurtado Abadia, I am a software developer, currently living in Medellín, i was born in this city <br>
+       but i grew up in the pacifict coast, my passions involve: Programming computer, learning languages,
+      <br> meet new places, people and culture, i like the literature and for me nutrition is a important topic that i'd like people to be aware of.</em>
       <div id="map" class="map">Medellín city</div>
       <script type="text/javascript">
         function medMap() {
